Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-11-20 (SVN):
    * r_misc.c (R_LineGraph2): Made the function static.
    * r_sprite.c: Moved under h2shared. Used the hexen2 version whose only
      difference from the hexenworld version was a developer mode print.
    * gl_rmain.c, r_sprite.c (R_GetSpriteframe): Made the "no such frame"
      a developer mode print.
    * quakedef.h: updated beta date stamp to 2011-11-20.

2011-11-18 (SVN):
    * Removed the alphanumeric-only limitation on the config file and game
      save directory names. Doesn't seem necessary.
    * quakedef.h: updated beta date stamp to 2011-11-18.

2011-11-14 (SVN):
    * gtk-launcher: Cleaned up the Makefile.
    * gtk-launcher: Removed an obsoleted macro.

2011-11-12 (SVN):
    * quakedef.h: updated beta date stamp to 2011-11-12.
    * net_udp.c: Fixed FIONREAD ioctl to take an int* argument instead of
      an unsigned long*.

2011-11-11 (SVN):
    * net: Tidied NET_CheckSockets() and NET_WaitReadTimeout() procedures
      which are actually the same. Renamed them to NET_CheckReadTimeout()
      and made them to look the same.
    * quakedef.h: updated beta date stamp to 2011-11-11.

2011-11-10 (SVN):
    * quakedef.h: updated beta date stamp to 2011-11-10.

2011-11-10 (SVN):
    * hw_utils/hwmquery, hw_utils/hwrcon: Many clean-ups. Bumped versions.

2011-11-10 (SVN):
    * net: ioctl_list(2) says FIONBIO takes const int * argument: Changed
      all to do so for unix platforms. Kept the windows versions to take a
      u_long argument.

2011-11-10 (SVN):
    * hw_utils/hwmaster: Removed two unnecessary NULL assignments after
      freeing a pointer.
    * hw_utils/hwmquery: Fixed a compiler warning in 64 bit due to ssize_t.

2011-11-09 (SVN):
    * quakedef.h: updated beta date stamp to 2011-11-09.
    * hw_utils/hwmaster: Removed the unnecessary registered server counting
      code from Mst_SendList(). In protocol.h, renamed M2C_MASTER_REPLY to